Логин, хранение данных для входа

--- a/AndroidTuts/tutorial/SimpleRoutingSolution/app/src/main/res/values/strings.xml
+++ b/AndroidTuts/tutorial/SimpleRoutingSolution/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">HelloHEREMaps</string>
+    <string name="app_name">Помогатор</string>
     <string name="hello_world">Hello world!</string>
-    <string name="menu_settings">Settings</string>
+    <string name="menu_settings_logout">Выход</string>
     <string name="title_activity_main">Hello HERE Maps!</string>
-    <string name="label_button_getdirections">Get Directions</string>
-    <string name="textview_routecoordinates_2waypoints">Press "Get Directions" button to calculate a route:\nStart: Nokia, Burnaby\nEnd: Airport, YVR</string>
+    <string name="label_button_getdirections">Начать поездку</string>
+    <string name="textview_routecoordinates_2waypoints">Press Get Directions button to calculate a route: Start: Nokia, Burnaby End: Airport, YVR</string>
+    <string name="preference_file_key">com.mapstutorial.simplerouting</string>
 </resources>
